Freestyle Modifer - curvature 3d versus 3d curvature #91541

Closed
opened 2021-09-20 19:36:31 +02:00 by Reiner Prokein · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-19 06:20, hash: 257c7753e9
Worked: (newest version of Blender that worked as expected)

Short description of error
In the modifier dropdown the modifier is called curvature 3d.
In the modifier stack the modifier is called 3D curvature.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

  • Activate Freestyle in the render properties
  • Switch to View Layer Properties
  • In the Freestyle Alpha Panel add a Curvature 3D modifier.
  • Watch the name

3dcurvature3d.jpg

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce GTX 1060 6GB/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.09 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-09-19 06:20, hash: `257c7753e9` Worked: (newest version of Blender that worked as expected) **Short description of error** In the modifier dropdown the modifier is called curvature 3d. In the modifier stack the modifier is called 3D curvature. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)] - Activate Freestyle in the render properties - Switch to View Layer Properties - In the Freestyle Alpha Panel add a Curvature 3D modifier. - Watch the name ![3dcurvature3d.jpg](https://archive.blender.org/developer/F10516978/3dcurvature3d.jpg)
Author

Added subscriber: @tiles

Added subscriber: @tiles
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Archived'

Changed status from 'Needs Triage' to: 'Archived'
Member

Thanks for the report, but please use other channels for user feedback: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests

For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug

Thanks for the report, but please use other channels for user feedback: https://wiki.blender.org/wiki/Communication/Contact#User_Feedback_and_Requests For more information on why this isn't considered a bug, visit: https://wiki.blender.org/wiki/Reference/Not_a_bug
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Archived' to: 'Confirmed'

Changed status from 'Archived' to: 'Confirmed'
Member

I think we could update this for consistency (so reopening the ticket).

I think we could update this for consistency (so reopening the ticket).
Ujwal Kundur self-assigned this 2022-03-27 21:18:50 +02:00
Ujwal Kundur was unassigned by Yash Dabhade 2022-03-30 23:09:15 +02:00
Yash Dabhade self-assigned this 2022-03-30 23:09:15 +02:00
Member

Added subscriber: @Ujwal-Kundur

Added subscriber: @Ujwal-Kundur
Yash Dabhade was unassigned by Pratik Borhade 2022-03-31 04:54:25 +02:00
Ujwal Kundur was assigned by Pratik Borhade 2022-03-31 04:54:25 +02:00
Member

Added subscriber: @YASH-DABHADE

Added subscriber: @YASH-DABHADE
Member

@YASH-DABHADE hi, patch is already submitted for this (also accepted): D14469: Fix #95604: Naming inconsistencies in alembic exporter options
So no more work is needed on this task.
I would suggest you to grab some other report (best to check #good_first_issue)

Reassigning to @Ujwal-Kundur

@YASH-DABHADE hi, patch is already submitted for this (also accepted): [D14469: Fix #95604: Naming inconsistencies in alembic exporter options](https://archive.blender.org/developer/D14469) So no more work is needed on this task. I would suggest you to grab some other report (best to check #good_first_issue) Reassigning to @Ujwal-Kundur

This issue was referenced by f16033c0f5

This issue was referenced by f16033c0f578b2269012865f18080cdd2b7b582b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91541
No description provided.