Fix T91541: Naming of Freestyle Curvature 3D modifier

Change the modifier name in the modifier stack to "Curvature 3D"
to be consistent with the modifier name in the drop-down.

Differential Revision: https://developer.blender.org/D14476